add contact details

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gunjot Entour</title>
+
+    <!-- Favicon Setup -->
+    <!-- SVG Favicon (modern browsers) -->
+    <link rel="icon" type="image/svg+xml" href="/gujnot-entour.svg" />
+    <!-- PNG Fallback (32x32 or 64x64 recommended) -->
+    <link rel="icon" type="image/png" sizes="64x64" href="/gujnot-entour.png" />
   </head>
   <body>
     <div id="root"></div>
